--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Personal Site — Layered Scene with Overlay</title>
 <style>
   :root{
-    /* You set this to 2.0 earlier; leaving as-is */
+    /* You set desktop overlay to 2.0 earlier; keeping that. */
     --overlay-opacity: 2.0;
     --overlay-blend: overlay;
   }
@@ -35,7 +35,7 @@
     position:absolute;
     inset:0;
     background-repeat:no-repeat;
-    background-size:cover;            /* default; overridden for mobile below */
+    background-size:cover;   /* default for PC; mobile overrides below */
   }
 
   /* Z-order: bg (0) < stickers (1) < overlay (2) */
@@ -47,39 +47,28 @@
     pointer-events:none;
   }
 
-  /* ---------- DESKTOP (PC) ---------- */
+  /* ---------- PC (unchanged from the good state) ---------- */
   .pc::before{
     background-image:url('/pc/bg.png');
-    /* Nudge up a bit so the top “post” greenscreen is more visible */
-    background-position:center top -8%;
+    background-position:center top -8%;  /* slight upward nudge as you liked */
   }
   .pc::after{
     background-image:url('/pc/overlay.png');
     background-position:center top -8%;
   }
 
-  /* ---------- MOBILE ---------- */
+  /* ---------- MOBILE (fit by WIDTH; top/bottom may crop) ---------- */
   .mobile::before{
     background-image:url('/mobile/bg.png');
-    /* Fit by WIDTH on mobile (no horizontal cropping); crop top/bottom as needed */
-    background-size:100% auto;         /* width = viewport width, preserve ratio */
-    background-position:top center;    /* start a bit higher so top is visible */
+    background-size:100% auto;       /* fit width exactly */
+    background-position: top center; /* keep the top visible so greenscreens show */
   }
   .mobile::after{
     background-image:url('/mobile/overlay.png');
     background-size:100% auto;
-    background-position:top center;
-    opacity:.25;                        /* gentler mobile overlay; tweak if you want */
-  }
-
-  /* If the phone is extremely tall (would letterbox), fall back to cover
-     so we still fill height; slight side-crop may occur on ultra-tall screens */
-  @media (max-aspect-ratio: 10/16){
-    .mobile::before,
-    .mobile::after{
-      background-size:cover;
-      background-position:center top;
-    }
+    background-position: top center;
+    opacity:.25;                     /* gentler mobile overlay; tweak if desired */
+    mix-blend-mode:overlay;
   }
 
   /* responsive switch */
@@ -93,7 +82,7 @@
   /* Stickers (clickable anchors) */
   .slot{
     position:absolute;
-    z-index:1;
+    z-index:1;                  /* between bg (0) and overlay (2) */
     width:var(--w);
     top:var(--t);
     left:var(--l);
@@ -128,7 +117,7 @@
   .pc .slot-4{ --w:15%; --t:36%; --l:22%; }  /* YouTube */
   .pc .slot-5{ --w:15%; --t:36%; --l:69%; }  /* Px1rt */
 
-  /* ---------- Mobile defaults (tweak later) ---------- */
+  /* ---------- Mobile defaults (tweak later as needed) ---------- */
   .mobile .slot-1{ --w:70%;  --t:6%;  --l:6%; }
   .mobile .slot-2{ --w:58%;  --t:14%; --l:20%; }
   .mobile .slot-3{ --w:50%;  --t:8%;  --l:46%; }
