--- a/index.html
+++ b/index.html
@@ -35,54 +35,64 @@
     position:absolute;
     inset:0;
     background-repeat:no-repeat;
-    background-size:cover;   /* default for PC; mobile overrides below */
+    background-size:cover;      /* default (PC) — MOBILE overrides below */
+    background-position:center; /* stable framing for PC */
   }
 
-  /* Z-order: bg (0) < stickers (1) < overlay (2) */
-  .scene::before{ z-index:0; }
+  /* Z-order: bg (0) < anim (1) < stickers (2) < overlay (3) */
+  .scene::before{ z-index:0; }              /* BACKGROUND */
+  .anim{
+    position:absolute; inset:0;
+    z-index:1;                               /* TRANSPARENT GIF LAYER */
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position:center;
+    pointer-events:none;
+  }
+  .slot{ z-index:2; }                        /* STICKERS */
   .scene::after{
-    z-index:2;
+    z-index:3;                               /* OVERLAY (blends) */
     opacity:var(--overlay-opacity);
     mix-blend-mode:var(--overlay-blend);
     pointer-events:none;
   }
 
-  /* ---------- PC (unchanged from the good state) ---------- */
-  .pc::before{
-    background-image:url('/pc/bg.png');
-    background-position:center top -8%;  /* slight upward nudge as you liked */
-  }
-  .pc::after{
-    background-image:url('/pc/overlay.png');
-    background-position:center top -8%;
-  }
+  /* ---------- PC (restored framing) ---------- */
+  .pc::before { background-image:url('/pc/bg.png'); }
+  .pc .anim   { background-image:url('/pc/anim.gif'); }     /* optional */
+  .pc::after  { background-image:url('/pc/overlay.png'); }
 
   /* ---------- MOBILE (fit by WIDTH; top/bottom may crop) ---------- */
   .mobile::before{
     background-image:url('/mobile/bg.png');
-    background-size:100% auto;       /* fit width exactly */
-    background-position: top center; /* keep the top visible so greenscreens show */
+  }
+  .mobile .anim{
+    background-image:url('/mobile/anim.gif');               /* optional */
   }
   .mobile::after{
     background-image:url('/mobile/overlay.png');
-    background-size:100% auto;
-    background-position: top center;
-    opacity:.25;                     /* gentler mobile overlay; tweak if desired */
-    mix-blend-mode:overlay;
+    opacity:.25;                                            /* gentler on mobile */
   }
 
-  /* responsive switch */
-  .pc{display:block;}
-  .mobile{display:none;}
-  @media(max-width:800px){
+  /* Ensure mobile fits by WIDTH specifically */
+  @media (max-width:800px){
     .pc{display:none;}
     .mobile{display:block;}
+    .mobile::before,
+    .mobile .anim,
+    .mobile::after{
+      background-size:100% auto;    /* width fits exactly */
+      background-position:top center;/* show more top; crop vertically if needed */
+    }
+  }
+  @media (min-width:801px){
+    .pc{display:block;}
+    .mobile{display:none;}
   }
 
   /* Stickers (clickable anchors) */
   .slot{
     position:absolute;
-    z-index:1;                  /* between bg (0) and overlay (2) */
     width:var(--w);
     top:var(--t);
     left:var(--l);
@@ -117,7 +127,7 @@
   .pc .slot-4{ --w:15%; --t:36%; --l:22%; }  /* YouTube */
   .pc .slot-5{ --w:15%; --t:36%; --l:69%; }  /* Px1rt */
 
-  /* ---------- Mobile defaults (tweak later as needed) ---------- */
+  /* ---------- Mobile defaults (you can tweak) ---------- */
   .mobile .slot-1{ --w:70%;  --t:6%;  --l:6%; }
   .mobile .slot-2{ --w:58%;  --t:14%; --l:20%; }
   .mobile .slot-3{ --w:50%;  --t:8%;  --l:46%; }
@@ -138,6 +148,8 @@
 
 <!-- Desktop Scene -->
 <section class="scene pc" aria-label="Desktop scene with layered background and interactive stickers">
+  <div class="anim" aria-hidden="true"></div>
+
   <div class="slot slot-1" data-slot="#1">
     <a class="sticker" href="#" aria-label="FiradPatra">
       <img src="/pc/fp.png" alt="FiradPatra">
@@ -169,6 +181,8 @@
 
 <!-- Mobile Scene -->
 <section class="scene mobile" aria-label="Mobile scene with layered background and interactive stickers">
+  <div class="anim" aria-hidden="true"></div>
+
   <div class="slot slot-1" data-slot="#1">
     <a class="sticker" href="#" aria-label="FiradPatra">
       <img src="/mobile/fp.png" alt="FiradPatra">
