--- a/index.html
+++ b/index.html
@@ -3,220 +3,240 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Personal Site — Layered Scene with Overlay</title>
+<title>Personal Site — Layered Scene (overlay, ads @ 100%, lights sequence)</title>
 <style>
   :root{
-    /* You set desktop overlay to 2.0 earlier; keeping that. */
+    /* Overlay intensity for BOTH pc and mobile */
     --overlay-opacity: 2.0;
     --overlay-blend: overlay;
   }
 
   html,body{
-    margin:0;
-    height:100%;
-    width:100%;
-    overflow:hidden;
-    background:#000;
+    margin:0; height:100%; width:100%;
+    overflow:hidden; background:#000;
     font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
   }
 
+  /* ======= SCENE ======= */
   .scene{
     position:relative;
-    width:100vw;
-    height:100vh;
-    isolation:isolate;
-    overflow:hidden;
+    width:100vw; height:100vh; min-height:100dvh;
+    overflow:hidden; isolation:isolate;
   }
 
-  /* TRUE layers: bg + overlay as pseudo-elements */
+  /* True layer stack: bg (::before) < lights < stickers < overlay (::after) */
   .scene::before,
   .scene::after{
     content:"";
-    position:absolute;
-    inset:0;
-    background-repeat:no-repeat;
-    background-size:cover;      /* default (PC) — MOBILE overrides below */
-    background-position:center; /* stable framing for PC */
-  }
-
-  /* Z-order: bg (0) < anim (1) < stickers (2) < overlay (3) */
-  .scene::before{ z-index:0; }              /* BACKGROUND */
-  .anim{
     position:absolute; inset:0;
-    z-index:1;                               /* TRANSPARENT GIF LAYER */
     background-repeat:no-repeat;
-    background-size:cover;
-    background-position:center;
-    pointer-events:none;
+    background-size:cover;          /* PC default (mobile overrides where needed) */
+    background-position:center;     /* PC default framing */
   }
-  .slot{ z-index:2; }                        /* STICKERS */
+  .scene::before{ z-index:0; }      /* BACKGROUND */
+  .lights{
+    position:absolute; inset:0;
+    z-index:1;                      /* PNG sequence sits above bg, below stickers */
+    background-repeat:no-repeat;
+    background-position:center;     /* keep image centered */
+    background-size:auto;           /* 100% native pixel size (no scaling) */
+    pointer-events:none;            /* never intercept clicks */
+    image-rendering:auto;           /* keep quality */
+    opacity:1;
+  }
+  .slot{ z-index:2; }               /* STICKERS */
   .scene::after{
-    z-index:3;                               /* OVERLAY (blends) */
-    opacity:var(--overlay-opacity);
-    mix-blend-mode:var(--overlay-blend);
+    z-index:3;                      /* OVERLAY that blends */
     pointer-events:none;
+    mix-blend-mode:var(--overlay-blend);
+    opacity:var(--overlay-opacity);
   }
 
-  /* ---------- PC (restored framing) ---------- */
-  .pc::before { background-image:url('/pc/bg.png'); }
-  .pc .anim   { background-image:url('/pc/anim.gif'); }     /* optional */
-  .pc::after  { background-image:url('/pc/overlay.png'); }
+  /* ======= DEVICE SCENES ======= */
+  /* PC: stable framing you liked (slightly higher) */
+  .pc::before{ background-image:url('/pc/bg.png'); background-position:center top -8%; }
+  .pc .lights{ background-position:center top -8%; } /* align lights with bg */
+  .pc::after { background-image:url('/pc/overlay.png'); background-position:center top -8%; }
 
-  /* ---------- MOBILE (fit by WIDTH; top/bottom may crop) ---------- */
-  .mobile::before{
-    background-image:url('/mobile/bg.png');
-  }
-  .mobile .anim{
-    background-image:url('/mobile/anim.gif');               /* optional */
-  }
-  .mobile::after{
-    background-image:url('/mobile/overlay.png');
-    opacity:.25;                                            /* gentler on mobile */
-  }
+  /* Mobile: fit by WIDTH (top/bottom may crop) and overlay also at 2.0 */
+  .mobile::before{ background-image:url('/mobile/bg.png'); }
+  .mobile .lights{ /* sequence frames also native size, centered */ }
+  .mobile::after { background-image:url('/mobile/overlay.png'); }
 
-  /* Ensure mobile fits by WIDTH specifically */
+  /* Responsive switch: PC default, Mobile under 800px */
+  .pc{display:block;} .mobile{display:none;}
   @media (max-width:800px){
-    .pc{display:none;}
-    .mobile{display:block;}
-    .mobile::before,
-    .mobile .anim,
-    .mobile::after{
-      background-size:100% auto;    /* width fits exactly */
-      background-position:top center;/* show more top; crop vertically if needed */
+    .pc{display:none;} .mobile{display:block;}
+    .mobile::before, .mobile::after{
+      background-size:100% auto;      /* fit width exactly */
+      background-position:top center; /* show more top; crop vertically if needed */
+    }
+    .mobile .lights{
+      background-size:auto;           /* keep 1:1 pixel size for sequence */
+      background-position:center;     /* center the native-size frame */
     }
   }
-  @media (min-width:801px){
-    .pc{display:block;}
-    .mobile{display:none;}
-  }
 
-  /* Stickers (clickable anchors) */
+  /* ======= STICKERS (ads + buy/download as images) ======= */
   .slot{
     position:absolute;
-    width:var(--w);
-    top:var(--t);
-    left:var(--l);
+    /* no width here → elements render at their INTRINSIC size (100% of image size) */
+    top:var(--t); left:var(--l);
   }
-  .sticker{display:block;width:100%;text-decoration:none;}
+  .sticker{ display:inline-block; text-decoration:none; outline:none; cursor:pointer; }
   .sticker img{
-    width:100%;
-    height:auto;
     display:block;
-    filter:drop-shadow(0 4px 8px rgba(0,0,0,0.3));
+    width:auto; height:auto;         /* show at native pixel size */
+    filter:drop-shadow(0 4px 8px rgba(0,0,0,.30));
   }
 
-  /* KTM action buttons */
-  .btn{
-    position:absolute;
-    bottom:.4rem;
-    font-size:12px;
-    padding:.4rem .6rem;
-    border-radius:999px;
-    background:#111;
-    color:#fff;
-    text-decoration:none;
-    box-shadow:0 2px 6px rgba(0,0,0,0.25);
-  }
-  .btn.buy{ right:4.9rem; }
-  .btn.dl{ right:.4rem; }
+  /* -------- Desktop default positions (tweak freely) -------- */
+  .pc .slot-1{ --t:8%;   --l:12%; }  /* FiradPatra */
+  .pc .slot-2{ --t:7%;   --l:37%; }  /* Welcome / Post */
+  .pc .slot-3{ --t:7%;   --l:70%; }  /* Kathmandu */
+  .pc .slot-4{ --t:36%;  --l:22%; }  /* YouTube */
+  .pc .slot-5{ --t:36%;  --l:69%; }  /* Px1rt */
+  .pc .slot-6{ --t:11.5%;--l:74%; }  /* BUY image near #3 (adjust) */
+  .pc .slot-7{ --t:11.5%;--l:79%; }  /* DOWNLOAD image near #3 (adjust) */
 
-  /* ---------- Desktop ad alignment (greenscreen targets) ---------- */
-  .pc .slot-1{ --w:15%; --t:8%;  --l:12%; }  /* FiradPatra */
-  .pc .slot-2{ --w:25%; --t:7%;  --l:37%; }  /* Welcome / Post */
-  .pc .slot-3{ --w:17%; --t:7%;  --l:70%; }  /* Kathmandu */
-  .pc .slot-4{ --w:15%; --t:36%; --l:22%; }  /* YouTube */
-  .pc .slot-5{ --w:15%; --t:36%; --l:69%; }  /* Px1rt */
+  /* -------- Mobile defaults (tweak later) -------- */
+  .mobile .slot-1{ --t:6%;  --l:6%;  }
+  .mobile .slot-2{ --t:14%; --l:20%; }
+  .mobile .slot-3{ --t:8%;  --l:46%; }
+  .mobile .slot-4{ --t:54%; --l:8%;  }
+  .mobile .slot-5{ --t:55%; --l:62%; }
+  .mobile .slot-6{ --t:18%; --l:70%; } /* BUY image on mobile */
+  .mobile .slot-7{ --t:18%; --l:78%; } /* DOWNLOAD image on mobile */
 
-  /* ---------- Mobile defaults (you can tweak) ---------- */
-  .mobile .slot-1{ --w:70%;  --t:6%;  --l:6%; }
-  .mobile .slot-2{ --w:58%;  --t:14%; --l:20%; }
-  .mobile .slot-3{ --w:50%;  --t:8%;  --l:46%; }
-  .mobile .slot-4{ --w:28%;  --t:54%; --l:8%; }
-  .mobile .slot-5{ --w:30%;  --t:55%; --l:62%; }
-
-  /* Debug outlines (press “d”) */
-  body.debug .slot{outline:2px dashed rgba(255,255,255,.8);}
+  /* ======= Debug (press “d”) ======= */
+  body.debug .slot{ outline:2px dashed rgba(255,255,255,.8); }
   body.debug .slot::after{
     content:attr(data-slot);
-    position:absolute;top:-.9rem;left:-.9rem;
-    background:#ff2;color:#111;border-radius:6px;padding:.25rem .35rem;
-    font:600 12px/1.2 monospace;
+    position:absolute; top:-.9rem; left:-.9rem;
+    background:#ff2; color:#111; border-radius:6px; padding:.25rem .35rem;
+    font:600 12px/1.2 ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;
+    box-shadow:0 2px 6px rgba(0,0,0,.25);
   }
 </style>
 </head>
 <body>
 
-<!-- Desktop Scene -->
-<section class="scene pc" aria-label="Desktop scene with layered background and interactive stickers">
-  <div class="anim" aria-hidden="true"></div>
+<!-- ========== PC SCENE ========== -->
+<section class="scene pc" aria-label="Desktop scene with layered background and animated lights">
+  <!-- Lights PNG sequence (native size, centered) -->
+  <div class="lights" aria-hidden="true"></div>
 
+  <!-- Five ads as stickers at native size -->
   <div class="slot slot-1" data-slot="#1">
-    <a class="sticker" href="#" aria-label="FiradPatra">
-      <img src="/pc/fp.png" alt="FiradPatra">
-    </a>
+    <a class="sticker" href="#" aria-label="FiradPatra"><img src="/pc/fp.png" alt="FiradPatra"></a>
   </div>
   <div class="slot slot-2" data-slot="#2">
-    <a class="sticker" href="#" aria-label="Welcome poster">
-      <img src="/pc/post.png" alt="Welcome poster">
-    </a>
+    <a class="sticker" href="#" aria-label="Welcome / Post"><img src="/pc/post.png" alt="Welcome / Post"></a>
   </div>
   <div class="slot slot-3" data-slot="#3">
-    <a class="sticker" href="#" aria-label="Kathmandu poster">
-      <img src="/pc/ktm.png" alt="Kathmandu poster">
-    </a>
-    <a class="btn buy" href="#" target="_blank" rel="noopener">Buy</a>
-    <a class="btn dl" href="/ktm.pdf" download rel="noopener">Download</a>
+    <a class="sticker" href="#" aria-label="Kathmandu"><img src="/pc/ktm.png" alt="Kathmandu"></a>
   </div>
   <div class="slot slot-4" data-slot="#4">
-    <a class="sticker" href="#" aria-label="YouTube poster">
-      <img src="/pc/yt.png" alt="YouTube poster">
-    </a>
+    <a class="sticker" href="#" aria-label="YouTube"><img src="/pc/yt.png" alt="YouTube"></a>
   </div>
   <div class="slot slot-5" data-slot="#5">
-    <a class="sticker" href="#" aria-label="Px1rt poster">
-      <img src="/pc/px1rt.png" alt="Px1rt poster">
+    <a class="sticker" href="#" aria-label="Px1rt"><img src="/pc/px1rt.png" alt="Px1rt"></a>
+  </div>
+
+  <!-- BUY / DOWNLOAD as their own clickable images (no buttons) -->
+  <div class="slot slot-6" data-slot="#buy">
+    <a class="sticker" href="#" target="_blank" rel="noopener" aria-label="Buy">
+      <img src="/pc/buy.png" alt="Buy">
+    </a>
+  </div>
+  <div class="slot slot-7" data-slot="#download">
+    <a class="sticker" href="/ktm.pdf" download aria-label="Download Kathmandu PDF">
+      <img src="/pc/download.png" alt="Download">
     </a>
   </div>
 </section>
 
-<!-- Mobile Scene -->
-<section class="scene mobile" aria-label="Mobile scene with layered background and interactive stickers">
-  <div class="anim" aria-hidden="true"></div>
+<!-- ========== MOBILE SCENE ========== -->
+<section class="scene mobile" aria-label="Mobile scene with layered background and animated lights">
+  <div class="lights" aria-hidden="true"></div>
 
   <div class="slot slot-1" data-slot="#1">
-    <a class="sticker" href="#" aria-label="FiradPatra">
-      <img src="/mobile/fp.png" alt="FiradPatra">
-    </a>
+    <a class="sticker" href="#" aria-label="FiradPatra"><img src="/mobile/fp.png" alt="FiradPatra"></a>
   </div>
   <div class="slot slot-2" data-slot="#2">
-    <a class="sticker" href="#" aria-label="Welcome poster">
-      <img src="/mobile/post.png" alt="Welcome poster">
-    </a>
+    <a class="sticker" href="#" aria-label="Welcome / Post"><img src="/mobile/post.png" alt="Welcome / Post"></a>
   </div>
   <div class="slot slot-3" data-slot="#3">
-    <a class="sticker" href="#" aria-label="Kathmandu poster">
-      <img src="/mobile/ktm.png" alt="Kathmandu poster">
-    </a>
-    <a class="btn buy" href="#" target="_blank" rel="noopener">Buy</a>
-    <a class="btn dl" href="/ktm.pdf" download rel="noopener">Download</a>
+    <a class="sticker" href="#" aria-label="Kathmandu"><img src="/mobile/ktm.png" alt="Kathmandu"></a>
   </div>
   <div class="slot slot-4" data-slot="#4">
-    <a class="sticker" href="#" aria-label="YouTube poster">
-      <img src="/mobile/yt.png" alt="YouTube poster">
-    </a>
+    <a class="sticker" href="#" aria-label="YouTube"><img src="/mobile/yt.png" alt="YouTube"></a>
   </div>
   <div class="slot slot-5" data-slot="#5">
-    <a class="sticker" href="#" aria-label="Px1rt poster">
-      <img src="/mobile/px1rt.png" alt="Px1rt poster">
+    <a class="sticker" href="#" aria-label="Px1rt"><img src="/mobile/px1rt.png" alt="Px1rt"></a>
+  </div>
+
+  <!-- BUY / DOWNLOAD as images on mobile -->
+  <div class="slot slot-6" data-slot="#buy">
+    <a class="sticker" href="#" target="_blank" rel="noopener" aria-label="Buy">
+      <img src="/mobile/buy.png" alt="Buy">
+    </a>
+  </div>
+  <div class="slot slot-7" data-slot="#download">
+    <a class="sticker" href="/ktm.pdf" download aria-label="Download Kathmandu PDF">
+      <img src="/mobile/download.png" alt="Download">
     </a>
   </div>
 </section>
 
 <script>
-  // Debug toggle: press "d" to show outlines and slot numbers
-  addEventListener('keydown', e=>{
-    if(e.key.toLowerCase()==='d'){ document.body.classList.toggle('debug'); }
-  }, {passive:true});
-</script>
-</body>
-</html>
+/* PNG LIGHTS SEQUENCE (no libraries)
+   - Place frames at:
+       pc/lights/lights0000.png ... lights0015.png
+       mobile/lights/lights0000.png ... lights0015.png
+   - Images are rendered at 100% native size (no scaling) via CSS (background-size:auto)
+   - Loop forever at the given FPS
+*/
+(function(){
+  const FRAME_COUNT = 16;     // 0000..0015 (inclusive)
+  const FPS_PC = 12;
+  const FPS_MOBILE = 12;
+
+  function pad4(n){ return String(n).padStart(4,'0'); }
+
+  function buildFrameList(kind){
+    const base = `/${kind}/lights/lights`;
+    const list = [];
+    for(let i=0;i<FRAME_COUNT;i++){
+      list.push(`${base}${pad4(i)}.png`);
+    }
+    return list;
+  }
+
+  function startLoop(sceneEl, frames, fps){
+    if(!sceneEl) return;
+    const layer = sceneEl.querySelector('.lights');
+    if(!layer) return;
+
+    let i = 0, last = 0, interval = 1000/Math.max(1,fps);
+
+    function step(ts){
+      if(!last){ last = ts; }
+      const dt = ts - last;
+      if(dt >= interval){
+        layer.style.backgroundImage = `url("${frames[i]}")`;
+        i = (i + 1) % frames.length;
+        last = ts;
+      }
+      requestAnimationFrame(step);
+    }
+    requestAnimationFrame(step);
+  }
+
+  // Preload frames (best-effort) then start
+  function preload(frames){
+    return Promise.all(frames.map(u => new Promise(res=>{
+      const im = new Image();
+      im.onload = ()=>res(true);
+      im.onerror = ()=>res(false);
+      im.src = u + `?v=${Date.now()
